# ResumeAgents

./: .gitignore  DEVELOPMENT_STRATEGY.md  README.md  REFACTORING_STRATEGY.md  USAGE_GUIDE.md  ai_resume_converter.py  convert_resume.py  main.py  pyproject.toml  requirements.txt
profiles/: my_profile_template.json
resumeagents/: __init__.py  default_config.py
resumeagents/agents/: __init__.py  base_agent.py  web_search_agent.py
resumeagents/agents/analysis/: __init__.py  company_analyst.py  jd_analyst.py  market_analyst.py
resumeagents/agents/evaluation/: __init__.py  candidate_analyst.py  trend_analyst.py
resumeagents/agents/evaluators/: __init__.py  analysis_evaluator.py  guide_evaluator.py  matching_evaluator.py  production_evaluator.py  stage_evaluator.py  strategy_evaluator.py
resumeagents/agents/guide/: __init__.py  experience_guide_agent.py  question_guide_agent.py  writing_guide_agent.py
resumeagents/agents/guides/: __init__.py  experience_guide.py  question_guide.py  writing_guide.py
resumeagents/agents/matching/: __init__.py  candidate_analyst.py  culture_analyst.py
resumeagents/graph/: __init__.py  resume_graph.py
resumeagents/templates/: candidate_analysis_template.json  company_analysis_template.json  experience_guide_template.json  jd_analysis_template.json  question_guide_template.json  writing_guide_template.json
resumeagents/utils/: __init__.py  ai_resume_converter.py  convert_resume.py  experience_vectordb.py  output_manager.py  profile_manager.py  template_loader.py  text_utils.py  unified_vectordb.py
(+8 files in other folders)
